Updated for Yalu1011 and run uicache after install

--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: fr.lululombard.certremaintime
-Name: CertRenameTime
-Version: 0.0.1
+Name: CertRemainTime
+Version: 1.0
 Architecture: iphoneos-arm
 Description: An app to check how much time is remaining for your yalu cert
 Maintainer: lululombard <contact@lululombard.fr>
